@@ -50,6 +50,7 @@ Bug fixes:
 - PR#4762: ?? is not used at all, but registered as a lexer token
 - PR#4887: input_char after close_in crashes ocaml (msvc runtime)
 - PR#4994: ocaml-mode doesn't work with xemacs21
+- PR#5098: creating module values may lead to memory leaks
 - PR#5102: ocamlbuild fails when using an unbound variable in rule dependency
 * PR#5119: camlp4 now raises a specific exception when 'DELETE_RULE' fails,
   rather than raising 'Not_found'
